--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Construisez la communauté que vos fans vont adorer. Huddle réinvente la façon dont nous construisons des communautés. Vous avez une voix, mais votre public aussi. Créez des liens avec vos utilisateurs en engageant une véritable discussion.">
     <title>Huddle</title>
+    <link rel="icon" href="favicon-32x32.png">
     <link rel="stylesheet" href="css_reset.css">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -96,7 +98,7 @@
                     <p class="mt-20">To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never 
                         send you spam or pass on your email address</p>
                 </div>
-                <div class="mt-30">
+                <div class="mt-30 flex">
                     <input type="email">
                     <button class="subscribe">Subscribe</button>
                 </div>
